--- a/Requirements.txt
+++ b/Requirements.txt
@@ -9,6 +9,7 @@ ipython==3.1.0
 itsdangerous==0.24
 Jinja2==2.7.3
 jsonschema==2.4.0
+Markdown==2.6.6
 MarkupSafe==0.23
 matplotlib==1.4.3
 mock==1.3.0
