--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,8 +1,8 @@
 backports.ssl-match-hostname==3.4.0.2
 certifi==14.5.14
-easygui==0.97.4
+docopt==0.6.2
 Flask==0.10.1
-funcsigs==0.4
+Flask-WTF==0.11
 geopy==1.11.0
 gnureadline==6.3.3
 ipython==3.1.0
@@ -10,23 +10,24 @@ itsdangerous==0.24
 Jinja2==2.7.3
 jsonschema==2.4.0
 Markdown==2.6.6
+markdown2==2.3.1
 MarkupSafe==0.23
 matplotlib==1.4.3
-mock==1.3.0
-nameparser==0.3.11
+nameparser==0.3.16
 nose==1.3.4
 numpy==1.9.2
 pandas==0.16.0
-pbr==1.8.1
+Pygments==2.1.3
 pyparsing==2.0.3
 python-dateutil==2.2
 pytz==2015.2
 pyzmq==14.5.0
-requests==2.9.1
+requests==2.9.0
 scikit-learn==0.16.0
 scipy==0.15.1
 six==1.9.0
 tornado==4.1
-tqdm==3.7.1
-Werkzeug==0.11.4
+tqdm==4.4.0
+Werkzeug==0.10.1
+WTForms==2.0.2
 xlrd==0.9.4
